# python-book

./: .gitignore  404.html  LICENSE  Makefile  Pipfile  README.md  Vagrantfile  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
ch00-00-introduction/: index.html
ch01-01-installation/: index.html
ch01-02-hello-world/: index.html
ch02-01-variables/: index.html
ch02-02-functions/: index.html
ch02-03-comments/: index.html
ch02-04-conditions/: index.html
ch02-05-loops/: index.html
ch02-06-list-comprehensions/: index.html
ch02-07-lambdas/: index.html
ch03-01-classes/: index.html
ch03-02-scopes/: index.html
ch03-03-special-attributes/: index.html
ch03-04-properties/: index.html
ch04-01-modules/: index.html
ch04-02-packages/: index.html
ch04-03-pip/: index.html
ch04-04-venv/: index.html
ch04-05-pipenv/: index.html
ch04-06-poetry/: index.html
ch04-06-project-structures/: index.html
ch04-07-project-structures/: index.html
ch05-01-files/: index.html
ch05-01-lists/: index.html
ch05-02-contexts/: index.html
ch05-02-dists/: index.html
ch05-03-csv/: index.html
ch05-04-json/: index.html
ch06-01-exceptions/: index.html
ch07-01-doctest/: index.html
ch07-01-generators/: index.html
ch07-02-pytest/: index.html
ch07-02-unittests/: index.html
ch08-01-doctest/: index.html
ch08-02-pytest/: index.html
ch09-01-tools/: index.html
ch09-02-pipenv/: index.html
ch09-03-poetry/: index.html
docs/: ch00-00-introduction.md  ch01-01-installation.md  ch01-02-hello-world.md  ch02-01-variables.md  (+35 more)
(+2 files in other folders)
