[tool.poetry]
name = "python-book"
version = "1.0.0"
description = "Learning Python from scratch"
authors = ["IDA Kenichiro"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
mkdocs = "^1.1.2"
mkdocs-material = "^5.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
